tests/type/antlr_parser/SubstraitTypeParser.py
# SPDX-License-Identifier: Apache-2.0
# Generated from SubstraitType.g4 by ANTLR 4.13.2
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys
if sys.version_info[1] > 5:
	from typing import TextIO
else:
	from typing.io import TextIO


class SubstraitTypeParser ( Parser ):

    grammarFileName = "SubstraitType.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "'IF'", "'THEN'", "'ELSE'", "'FUNC'", "'BOOLEAN'", 
                     "'I8'", "'I16'", "'I32'", "'I64'", "'FP32'", "'FP64'", 
                     "'STRING'", "'BINARY'", "'DATE'", "'INTERVAL_YEAR'", 
                     "'INTERVAL_DAY'", "'INTERVAL_COMPOUND'", "'UUID'", 
                     "'DECIMAL'", "'PRECISION_TIME'", "'PRECISION_TIMESTAMP'", 
                     "'PRECISION_TIMESTAMP_TZ'", "'FIXEDCHAR'", "'VARCHAR'", 
                     "'FIXEDBINARY'", "'STRUCT'", "'NSTRUCT'", "'LIST'", 
                     "'MAP'", "'U!'", "'BOOL'", "'STR'", "'VBIN'", "'IYEAR'", 
                     "'IDAY'", "'ICOMPOUND'", "'DEC'", "'PT'", "'PTS'", 
                     "'PTSTZ'", "'FCHAR'", "'VCHAR'", "'FBIN'", "'ANY'", 
                     "<INVALID>", "'::'", "'+'", "'-'", "'*'", "'/'", "'%'", 
                     "'='", "'!='", "'>='", "'<='", "'>'", "'<'", "'!'", 
                     "<INVALID>", "<INVALID>", "'('", "')'", "'['", "']'", 
                     "','", "':'", "'?'", "'#'", "'.'", "'AND'", "'OR'", 
                     "':='", "'->'" ]

    symbolicNames = [ "<INVALID>", "LineComment", "BlockComment", "Whitespace", 
                      "If", "Then", "Else", "Func", "Boolean", "I8", "I16", 
                      "I32", "I64", "FP32", "FP64", "String", "Binary", 
                      "Date", "Interval_Year", "Interval_Day", "Interval_Compound", 
                      "UUID", "Decimal", "Precision_Time", "Precision_Timestamp", 
                      "Precision_Timestamp_TZ", "FixedChar", "VarChar", 
                      "FixedBinary", "Struct", "NStruct", "List", "Map", 
                      "UserDefined", "Bool", "Str", "VBin", "IYear", "IDay", 
                      "ICompound", "Dec", "PT", "PTs", "PTsTZ", "FChar", 
                      "VChar", "FBin", "Any", "AnyVar", "DoubleColon", "Plus", 
                      "Minus", "Asterisk", "ForwardSlash", "Percent", "Eq", 
                      "Ne", "Gte", "Lte", "Gt", "Lt", "Bang", "OAngleBracket", 
                      "CAngleBracket", "OParen", "CParen", "OBracket", "CBracket", 
                      "Comma", "Colon", "QMark", "Hash", "Dot", "And", "Or", 
                      "Assign", "Arrow", "Number", "Identifier", "Newline" ]

    RULE_startRule = 0
    RULE_typeStatement = 1
    RULE_scalarType = 2
    RULE_parameterizedType = 3
    RULE_funcParams = 4
    RULE_numericParameter = 5
    RULE_anyType = 6
    RULE_typeDef = 7
    RULE_expr = 8

    ruleNames =  [ "startRule", "typeStatement", "scalarType", "parameterizedType", 
                   "funcParams", "numericParameter", "anyType", "typeDef", 
                   "expr" ]

    EOF = Token.EOF
    LineComment=1
    BlockComment=2
    Whitespace=3
    If=4
    Then=5
    Else=6
    Func=7
    Boolean=8
    I8=9
    I16=10
    I32=11
    I64=12
    FP32=13
    FP64=14
    String=15
    Binary=16
    Date=17
    Interval_Year=18
    Interval_Day=19
    Interval_Compound=20
    UUID=21
    Decimal=22
    Precision_Time=23
    Precision_Timestamp=24
    Precision_Timestamp_TZ=25
    FixedChar=26
    VarChar=27
    FixedBinary=28
    Struct=29
    NStruct=30
    List=31
    Map=32
    UserDefined=33
    Bool=34
    Str=35
    VBin=36
    IYear=37
    IDay=38
    ICompound=39
    Dec=40
    PT=41
    PTs=42
    PTsTZ=43
    FChar=44
    VChar=45
    FBin=46
    Any=47
    AnyVar=48
    DoubleColon=49
    Plus=50
    Minus=51
    Asterisk=52
    ForwardSlash=53
    Percent=54
    Eq=55
    Ne=56
    Gte=57
    Lte=58
    Gt=59
    Lt=60
    Bang=61
    OAngleBracket=62
    CAngleBracket=63
    OParen=64
    CParen=65
    OBracket=66
    CBracket=67
    Comma=68
    Colon=69
    QMark=70
    Hash=71
    Dot=72
    And=73
    Or=74
    Assign=75
    Arrow=76
    Number=77
    Identifier=78
    Newline=79

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.13.2")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class StartRuleContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def expr(self):
            return self.getTypedRuleContext(SubstraitTypeParser.ExprContext,0)


        def EOF(self):
            return self.getToken(SubstraitTypeParser.EOF, 0)

        def getRuleIndex(self):
            return SubstraitTypeParser.RULE_startRule

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterStartRule" ):
                listener.enterStartRule(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitStartRule" ):
                listener.exitStartRule(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitStartRule" ):
                return visitor.visitStartRule(self)
            else:
                return visitor.visitChildren(self)




    def startRule(self):

        localctx = SubstraitTypeParser.StartRuleContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_startRule)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 18
            self.expr(0)
            self.state = 19
            self.match(SubstraitTypeParser.EOF)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class TypeStatementContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def typeDef(self):
            return self.getTypedRuleContext(SubstraitTypeParser.TypeDefContext,0)


        def EOF(self):
            return self.getToken(SubstraitTypeParser.EOF, 0)

        def getRuleIndex(self):
            return SubstraitTypeParser.RULE_typeStatement

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterTypeStatement" ):
                listener.enterTypeStatement(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitTypeStatement" ):
                listener.exitTypeStatement(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitTypeStatement" ):
                return visitor.visitTypeStatement(self)
            else:
                return visitor.visitChildren(self)




    def typeStatement(self):

        localctx = SubstraitTypeParser.TypeStatementContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_typeStatement)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 21
            self.typeDef()
            self.state = 22
            self.match(SubstraitTypeParser.EOF)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ScalarTypeContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser


        def getRuleIndex(self):
            return SubstraitTypeParser.RULE_scalarType

     
        def copyFrom(self, ctx:ParserRuleContext):
            super().copyFrom(ctx)



    class DateContext(ScalarTypeContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a SubstraitTypeParser.ScalarTypeContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def Date(self):
            return self.getToken(SubstraitTypeParser.Date, 0)

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterDate" ):
                listener.enterDate(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitDate" ):
                listener.exitDate(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitDate" ):
                return visitor.visitDate(self)
            else:
                return visitor.visitChildren(self)


    class BooleanContext(ScalarTypeContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a SubstraitTypeParser.ScalarTypeContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def Boolean(self):
            return self.getToken(SubstraitTypeParser.Boolean, 0)

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterBoolean" ):
                listener.enterBoolean(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitBoolean" ):
                listener.exitBoolean(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitBoolean" ):
                return visitor.visitBoolean(self)
            else:
                return visitor.visitChildren(self)


    class StringContext(ScalarTypeContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a SubstraitTypeParser.ScalarTypeContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def String(self):
            return self.getToken(SubstraitTypeParser.String, 0)

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterString" ):
                listener.enterString(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitString" ):
                listener.exitString(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitString" ):
                return visitor.visitString(self)
            else:
                return visitor.visitChildren(self)


    class I64Context(ScalarTypeContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a SubstraitTypeParser.ScalarTypeContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def I64(self):
            return self.getToken(SubstraitTypeParser.I64, 0)

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterI64" ):
                listener.enterI64(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitI64" ):
                listener.exitI64(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitI64" ):
                return visitor.visitI64(self)
            else:
                return visitor.visitChildren(self)


    class BinaryContext(ScalarTypeContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a SubstraitTypeParser.ScalarTypeContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def Binary(self):
            return self.getToken(SubstraitTypeParser.Binary, 0)

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterBinary" ):
                listener.enterBinary(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitBinary" ):
                listener.exitBinary(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitBinary" ):
                return visitor.visitBinary(self)
            else:
                return visitor.visitChildren(self)


    class Fp64Context(ScalarTypeContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a SubstraitTypeParser.ScalarTypeContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def FP64(self):
            return self.getToken(SubstraitTypeParser.FP64, 0)

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterFp64" ):
                listener.enterFp64(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitFp64" ):
                listener.exitFp64(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitFp64" ):
                return visitor.visitFp64(self)
            else:
                return visitor.visitChildren(self)


    class I32Context(ScalarTypeContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a SubstraitTypeParser.ScalarTypeContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def I32(self):
            return self.getToken(SubstraitTypeParser.I32, 0)

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterI32" ):
                listener.enterI32(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitI32" ):
                listener.exitI32(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitI32" ):
                return visitor.visitI32(self)
            else:
                return visitor.visitChildren(self)


    class Fp32Context(ScalarTypeContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a SubstraitTypeParser.ScalarTypeContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def FP32(self):
            return self.getToken(SubstraitTypeParser.FP32, 0)

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterFp32" ):
                listener.enterFp32(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitFp32" ):
                listener.exitFp32(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitFp32" ):
                return visitor.visitFp32(self)
            else:
                return visitor.visitChildren(self)


    class IntervalYearContext(ScalarTypeContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a SubstraitTypeParser.ScalarTypeContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def Interval_Year(self):
            return self.getToken(SubstraitTypeParser.Interval_Year, 0)

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterIntervalYear" ):
                listener.enterIntervalYear(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitIntervalYear" ):
                listener.exitIntervalYear(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitIntervalYear" ):
                return visitor.visitIntervalYear(self)
            else:
                return visitor.visitChildren(self)


    class UuidContext(ScalarTypeContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a SubstraitTypeParser.ScalarTypeContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def UUID(self):
            return self.getToken(SubstraitTypeParser.UUID, 0)

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterUuid" ):
                listener.enterUuid(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitUuid" ):
                listener.exitUuid(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitUuid" ):
                return visitor.visitUuid(self)
            else:
                return visitor.visitChildren(self)


    class I8Context(ScalarTypeContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a SubstraitTypeParser.ScalarTypeContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def I8(self):
            return self.getToken(SubstraitTypeParser.I8, 0)

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterI8" ):
                listener.enterI8(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitI8" ):
                listener.exitI8(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitI8" ):
                return visitor.visitI8(self)
            else:
                return visitor.visitChildren(self)


    class I16Context(ScalarTypeContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a SubstraitTypeParser.ScalarTypeContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def I16(self):
            return self.getToken(SubstraitTypeParser.I16, 0)

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterI16" ):
                listener.enterI16(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitI16" ):
                listener.exitI16(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitI16" ):
                return visitor.visitI16(self)
            else:
                return visitor.visitChildren(self)



    def scalarType(self):

        localctx = SubstraitTypeParser.ScalarTypeContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_scalarType)
        try:
            self.state = 36
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [8]:
                localctx = SubstraitTypeParser.BooleanContext(self, localctx)
                self.enterOuterAlt(localctx, 1)
                self.state = 24
                self.match(SubstraitTypeParser.Boolean)
                pass
            elif token in [9]:
                localctx = SubstraitTypeParser.I8Context(self, localctx)
                self.enterOuterAlt(localctx, 2)
                self.state = 25
                self.match(SubstraitTypeParser.I8)
                pass
            elif token in [10]:
                localctx = SubstraitTypeParser.I16Context(self, localctx)
                self.enterOuterAlt(localctx, 3)
                self.state = 26
                self.match(SubstraitTypeParser.I16)
                pass
            elif token in [11]:
                localctx = SubstraitTypeParser.I32Context(self, localctx)
                self.enterOuterAlt(localctx, 4)
                self.state = 27
                self.match(SubstraitTypeParser.I32)
                pass
            elif token in [12]:
                localctx = SubstraitTypeParser.I64Context(self, localctx)
                self.enterOuterAlt(localctx, 5)
                self.state = 28
                self.match(SubstraitTypeParser.I64)
                pass
            elif token in [13]:
                localctx = SubstraitTypeParser.Fp32Context(self, localctx)
                self.enterOuterAlt(localctx, 6)
                self.state = 29
                self.match(SubstraitTypeParser.FP32)
                pass
            elif token in [14]:
                localctx = SubstraitTypeParser.Fp64Context(self, localctx)
                self.enterOuterAlt(localctx, 7)
                self.state = 30
                self.match(SubstraitTypeParser.FP64)
                pass
            elif token in [15]:
                localctx = SubstraitTypeParser.StringContext(self, localctx)
                self.enterOuterAlt(localctx, 8)
                self.state = 31
                self.match(SubstraitTypeParser.String)
                pass
            elif token in [16]:
                localctx = SubstraitTypeParser.BinaryContext(self, localctx)
                self.enterOuterAlt(localctx, 9)
                self.state = 32
                self.match(SubstraitTypeParser.Binary)
                pass
            elif token in [17]:
                localctx = SubstraitTypeParser.DateContext(self, localctx)
                self.enterOuterAlt(localctx, 10)
                self.state = 33
                self.match(SubstraitTypeParser.Date)
                pass
            elif token in [18]:
                localctx = SubstraitTypeParser.IntervalYearContext(self, localctx)
                self.enterOuterAlt(localctx, 11)
                self.state = 34
                self.match(SubstraitTypeParser.Interval_Year)
                pass
            elif token in [21]:
                localctx = SubstraitTypeParser.UuidContext(self, localctx)
                self.enterOuterAlt(localctx, 12)
                self.state = 35
                self.match(SubstraitTypeParser.UUID)
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ParameterizedTypeContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser


        def getRuleIndex(self):
            return SubstraitTypeParser.RULE_parameterizedType

     
        def copyFrom(self, ctx:ParserRuleContext):
            super().copyFrom(ctx)



    class StructContext(ParameterizedTypeContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a SubstraitTypeParser.ParameterizedTypeContext
            super().__init__(parser)
            self.isnull = None # Token
            self.copyFrom(ctx)

        def Struct(self):
            return self.getToken(SubstraitTypeParser.Struct, 0)
        def Lt(self):
            return self.getToken(SubstraitTypeParser.Lt, 0)
        def expr(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(SubstraitTypeParser.ExprContext)
            else:
                return self.getTypedRuleContext(SubstraitTypeParser.ExprContext,i)

        def Gt(self):
            return self.getToken(SubstraitTypeParser.Gt, 0)
        def Comma(self, i:int=None):
            if i is None:
                return self.getTokens(SubstraitTypeParser.Comma)
            else:
                return self.getToken(SubstraitTypeParser.Comma, i)
        def QMark(self):
            return self.getToken(SubstraitTypeParser.QMark, 0)

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterStruct" ):
                listener.enterStruct(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitStruct" ):
                listener.exitStruct(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitStruct" ):
                return visitor.visitStruct(self)
            else:
                return visitor.visitChildren(self)


    class PrecisionTimestampTZContext(ParameterizedTypeContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a SubstraitTypeParser.ParameterizedTypeContext
            super().__init__(parser)
            self.isnull = None # Token
            self.precision = None # NumericParameterContext
            self.copyFrom(ctx)

        def Precision_Timestamp_TZ(self):
            return self.getToken(SubstraitTypeParser.Precision_Timestamp_TZ, 0)
        def Lt(self):
            return self.getToken(SubstraitTypeParser.Lt, 0)
        def Gt(self):
            return self.getToken(SubstraitTypeParser.Gt, 0)
        def numericParameter(self):
            return self.getTypedRuleContext(SubstraitTypeParser.NumericParameterContext,0)

        def QMark(self):
            return self.getToken(SubstraitTypeParser.QMark, 0)

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterPrecisionTimestampTZ" ):
                listener.enterPrecisionTimestampTZ(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitPrecisionTimestampTZ" ):
                listener.exitPrecisionTimestampTZ(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitPrecisionTimestampTZ" ):
                return visitor.visitPrecisionTimestampTZ(self)
            else:
                return visitor.visitChildren(self)


    class NStructContext(ParameterizedTypeContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a SubstraitTypeParser.ParameterizedTypeContext
            super().__init__(parser)
            self.isnull = None # Token
            self.copyFrom(ctx)

        def NStruct(self):
            return self.getToken(SubstraitTypeParser.NStruct, 0)
        def Lt(self):
            return self.getToken(SubstraitTypeParser.Lt, 0)
        def Identifier(self, i:int=None):
            if i is None:
                return self.getTokens(SubstraitTypeParser.Identifier)
            else:
                return self.getToken(SubstraitTypeParser.Identifier, i)
        def Colon(self, i:int=None):
            if i is None:
                return self.getTokens(SubstraitTypeParser.Colon)
            else:
                return self.getToken(SubstraitTypeParser.Colon, i)
        def expr(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(SubstraitTypeParser.ExprContext)
            else:
                return self.getTypedRuleContext(SubstraitTypeParser.ExprContext,i)

        def Gt(self):
            return self.getToken(SubstraitTypeParser.Gt, 0)
        def Comma(self, i:int=None):
            if i is None:
                return self.getTokens(SubstraitTypeParser.Comma)
            else:
                return self.getToken(SubstraitTypeParser.Comma, i)
        def QMark(self):
            return self.getToken(SubstraitTypeParser.QMark, 0)

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterNStruct" ):
                listener.enterNStruct(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitNStruct" ):
                listener.exitNStruct(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitNStruct" ):
                return visitor.visitNStruct(self)
            else:
                return visitor.visitChildren(self)


    class FixedBinaryContext(ParameterizedTypeContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a SubstraitTypeParser.ParameterizedTypeContext
            super().__init__(parser)
            self.isnull = None # Token
            self.length = None # NumericParameterContext
            self.copyFrom(ctx)

        def FixedBinary(self):
            return self.getToken(SubstraitTypeParser.FixedBinary, 0)
        def Lt(self):
            return self.getToken(SubstraitTypeParser.Lt, 0)
        def Gt(self):
            return self.getToken(SubstraitTypeParser.Gt, 0)
        def numericParameter(self):
            return self.getTypedRuleContext(SubstraitTypeParser.NumericParameterContext,0)

        def QMark(self):
            return self.getToken(SubstraitTypeParser.QMark, 0)

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterFixedBinary" ):
                listener.enterFixedBinary(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitFixedBinary" ):
                listener.exitFixedBinary(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitFixedBinary" ):
                return visitor.visitFixedBinary(self)
            else:
                return visitor.visitChildren(self)


    class UserDefinedContext(ParameterizedTypeContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a SubstraitTypeParser.ParameterizedTypeContext
            super().__init__(parser)
            self.dependencyAlias = None # Token
            self.isnull = None # Token
            self.copyFrom(ctx)

        def UserDefined(self):
            return self.getToken(SubstraitTypeParser.UserDefined, 0)
        def Identifier(self, i:int=None):
            if i is None:
                return self.getTokens(SubstraitTypeParser.Identifier)
            else:
                return self.getToken(SubstraitTypeParser.Identifier, i)
        def Dot(self):
            return self.getToken(SubstraitTypeParser.Dot, 0)
        def Lt(self):
            return self.getToken(SubstraitTypeParser.Lt, 0)
        def expr(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(SubstraitTypeParser.ExprContext)
            else:
                return self.getTypedRuleContext(SubstraitTypeParser.ExprContext,i)

        def Gt(self):
            return self.getToken(SubstraitTypeParser.Gt, 0)
        def QMark(self):
            return self.getToken(SubstraitTypeParser.QMark, 0)
        def Comma(self, i:int=None):
            if i is None:
                return self.getTokens(SubstraitTypeParser.Comma)
            else:
                return self.getToken(SubstraitTypeParser.Comma, i)

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterUserDefined" ):
                listener.enterUserDefined(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitUserDefined" ):
                listener.exitUserDefined(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitUserDefined" ):
                return visitor.visitUserDefined(self)
            else:
                return visitor.visitChildren(self)


    class FixedCharContext(ParameterizedTypeContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a SubstraitTypeParser.ParameterizedTypeContext
            super().__init__(parser)
            self.isnull = None # Token
            self.length = None # NumericParameterContext
            self.copyFrom(ctx)

        def FixedChar(self):
            return self.getToken(SubstraitTypeParser.FixedChar, 0)
        def Lt(self):
            return self.getToken(SubstraitTypeParser.Lt, 0)
        def Gt(self):
            return self.getToken(SubstraitTypeParser.Gt, 0)
        def numericParameter(self):
            return self.getTypedRuleContext(SubstraitTypeParser.NumericParameterContext,0)

        def QMark(self):
            return self.getToken(SubstraitTypeParser.QMark, 0)

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterFixedChar" ):
                listener.enterFixedChar(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitFixedChar" ):
                listener.exitFixedChar(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitFixedChar" ):
                return visitor.visitFixedChar(self)
            else:
                return visitor.visitChildren(self)


    class ListContext(ParameterizedTypeContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a SubstraitTypeParser.ParameterizedTypeContext
            super().__init__(parser)
            self.isnull = None # Token
            self.copyFrom(ctx)

        def List(self):
            return self.getToken(SubstraitTypeParser.List, 0)
        def Lt(self):
            return self.getToken(SubstraitTypeParser.Lt, 0)
        def expr(self):
            return self.getTypedRuleContext(SubstraitTypeParser.ExprContext,0)

        def Gt(self):
            return self.getToken(SubstraitTypeParser.Gt, 0)
        def QMark(self):
            return self.getToken(SubstraitTypeParser.QMark, 0)

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterList" ):
                listener.enterList(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitList" ):
                listener.exitList(self)
